--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +19,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListViewActivity"
-            android:label="@string/title_activity_list_view"></activity>
+            android:name=".Activity.ListViewActivity"
+            android:label="@string/title_activity_list_view" />
+
+        <provider
+            android:name=".Provider.DealProvider"
+            android:authorities="com.smd.studio.adcashdemo.Provider.DealProvider" />
+
+        <activity
+            android:name=".Activity.MoreDetailsActivity"
+            android:label="@string/title_activity_more_details" />
     </application>
 
 </manifest>
